--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 jar {
-    baseName = 'paas-ta-caas-jenkins-broker'
+    baseName = 'caas-jenkins-broker'
 }
 
 ext {
@@ -27,7 +27,7 @@ ext {
     jsonPathVersion = '0.9.1'
 }
 
-group = 'com.openpaas.paasta'
+group = 'com.openpaas'
 version = ''
 sourceCompatibility = '1.8'
 
